--- a/RyanServiceClient/Web.config
+++ b/RyanServiceClient/Web.config
@@ -13,7 +13,7 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IService1" closeTimeout="00:01:00"
+                <binding name="BasicHttpBinding_IRyanService" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
                     maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
@@ -30,9 +30,9 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:1840/Service1.svc" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceProxy.IService1"
-                name="BasicHttpBinding_IService1" />
+            <endpoint address="http://localhost:1840/RyanService.svc" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IRyanService" contract="ServiceProxy.IRyanService"
+                name="BasicHttpBinding_IRyanService" />
         </client>
     </system.serviceModel>
 </configuration>
