--- a/RyanTester/RyanTester.csproj
+++ b/RyanTester/RyanTester.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
+    <Compile Include="DCAnnotationSurrogate.cs" />
     <Compile Include="OperationInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
