ready to deploy required services 7 and 8

--- a/RyanService/RyanService.csproj
+++ b/RyanService/RyanService.csproj
@@ -68,6 +68,7 @@
     </Compile>
     <Compile Include="IRyanService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WsdlOperationInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
