--- a/RyanService/Web.config
+++ b/RyanService/Web.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
   <system.web>
-    <compilation debug="true" targetFramework="4.0.1" />
+    <pages enableViewStateMac="false"/>
+    <customErrors mode="Off"/>
+    <authentication mode="Forms"/>
+    <authorization>
+      <allow users="*"/>
+    </authorization>
+    <compilation debug="true" targetFramework="4.0"/>
   </system.web>
   <system.serviceModel>
     <behaviors>
@@ -15,10 +20,9 @@
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
- <system.webServer>
+  <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
-  
 </configuration>
