--- a/RyanServiceClient/RyanServiceClient.csproj
+++ b/RyanServiceClient/RyanServiceClient.csproj
@@ -12,8 +12,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WebClient</RootNamespace>
     <AssemblyName>WebClient</AssemblyName>
-    <TargetFrameworkVersion>v4.0.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
@@ -41,34 +43,64 @@
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\ServiceProxy\RyanService.disco" />
+    <Content Include="WsHashOperations.aspx" />
     <None Include="Service References\ServiceProxy\configuration91.svcinfo" />
     <None Include="Service References\ServiceProxy\configuration.svcinfo" />
     <None Include="Service References\ServiceProxy\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <Content Include="tryWsHashOperations.aspx" />
-    <Content Include="tryGetWsOperations.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="TryGetWsOperations.aspx" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\ServiceProxy\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="TryGetWsOperations.aspx.cs">
+      <DependentUpon>TryGetWsOperations.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TryGetWsOperations.aspx.designer.cs">
+      <DependentUpon>TryGetWsOperations.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WsHashOperations.aspx.cs">
+      <DependentUpon>WsHashOperations.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WsHashOperations.aspx.designer.cs">
+      <DependentUpon>WsHashOperations.aspx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\ServiceProxy\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ServiceProxy\RyanService.wsdl" />
     <None Include="Service References\ServiceProxy\RyanService.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -78,35 +110,6 @@
     <None Include="Service References\ServiceProxy\RyanService2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ServiceProxy\Service1.wsdl" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="tryWsHashOperations.aspx.cs">
-      <DependentUpon>tryWsHashOperations.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="tryWsHashOperations.aspx.designer.cs">
-      <DependentUpon>tryWsHashOperations.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Service References\ServiceProxy\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
-    <Compile Include="tryGetWsOperations.aspx.cs">
-      <DependentUpon>tryGetWsOperations.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="tryGetWsOperations.aspx.designer.cs">
-      <DependentUpon>tryGetWsOperations.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Service References\ServiceProxy\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
