--- a/Top10Words/Web.config
+++ b/Top10Words/Web.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0"?>
 <configuration>
 
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Top10Words.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
   </system.web>
@@ -21,12 +26,29 @@
             <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
+        <binding name="BingPortBinding" closeTimeout="00:01:00" openTimeout="00:01:00"
+          receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+          bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+          messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
+          useDefaultWebProxy="true">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="None">
+            <transport clientCredentialType="None" proxyCredentialType="None"
+              realm="" />
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>
+        </binding>
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://venus.eas.asu.edu/WSRepository/Services/Web2StringSVC/Service.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService"
         contract="Web2String.IService" name="BasicHttpBinding_IService" />
+      <endpoint address="http://api.bing.net:80/soap.asmx" binding="basicHttpBinding"
+        bindingConfiguration="BingPortBinding" contract="BingSearch.BingPortType"
+        name="BingPort" />
     </client>
     <behaviors>
       <serviceBehaviors>
@@ -44,4 +66,11 @@
     <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
   
+ <applicationSettings>
+  <Top10Words.Properties.Settings>
+   <setting name="Top10Words_DictionarySvc_DictService" serializeAs="String">
+    <value>http://services.aonaware.com/DictService/DictService.asmx</value>
+   </setting>
+  </Top10Words.Properties.Settings>
+ </applicationSettings>
 </configuration>
