All services and service list

--- a/TryIt/Web.config
+++ b/TryIt/Web.config
@@ -69,9 +69,9 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:4157/reqdServices.svc" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_IReqdServices" contract="reqdServices.IReqdServices"
-        name="BasicHttpBinding_IReqdServices" />
+      <endpoint address="http://webstrar6.fulton.asu.edu/page5/reqdServices.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReqdServices"
+        contract="reqdServices.IReqdServices" name="BasicHttpBinding_IReqdServices" />
     </client>
   </system.serviceModel>
 </configuration>
