--- a/TryIt/TryIt.csproj
+++ b/TryIt/TryIt.csproj
@@ -60,19 +60,21 @@
     <Content Include="Account\Register.aspx" />
     <Content Include="definition.aspx" />
     <Content Include="NewFocus.aspx" />
-    <None Include="Service References\reqdServices\reqdServices.disco" />
+    <Content Include="RMA.aspx" />
     <None Include="Service References\reqdServices\configuration91.svcinfo" />
     <None Include="Service References\reqdServices\configuration.svcinfo" />
     <None Include="Service References\reqdServices\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <None Include="Service References\reqdServices\reqdServices1.disco" />
     <Content Include="Styles\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\jquery-1.4.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.1.js" />
     <Content Include="Scripts\jquery-1.4.1.min.js" />
+    <Content Include="TryItList.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -80,6 +82,22 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <None Include="Service References\reqdServices\ReqdServices1.wsdl" />
+    <None Include="Service References\reqdServices\reqdServices4.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\reqdServices\reqdServices41.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\reqdServices\reqdServices42.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\reqdServices\reqdServices43.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\reqdServices\TryIt.reqdServices.RMAticket.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="About.aspx.cs">
@@ -135,6 +153,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RMA.aspx.cs">
+      <DependentUpon>RMA.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RMA.aspx.designer.cs">
+      <DependentUpon>RMA.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Service References\reqdServices\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -167,18 +192,6 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\reqdServices\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\reqdServices\ReqdServices.wsdl" />
-    <None Include="Service References\reqdServices\reqdServices.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\reqdServices\reqdServices1.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\reqdServices\reqdServices2.xsd">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
