--- a/MusicSolution/MusicLookupService/Web.config
+++ b/MusicSolution/MusicLookupService/Web.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
   <system.web>
-    <compilation debug="true" targetFramework="4.0.1" />
+    <pages enableViewStateMac="false"/>
+    <customErrors mode="Off"/>
+    <authentication mode="Forms"/>
+    <authorization>
+      <allow users="*"/>
+    </authorization>
+    <compilation debug="true" targetFramework="4.0"/>
   </system.web>
   <system.serviceModel>
     <behaviors>
@@ -11,14 +16,13 @@
           <!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
           <serviceMetadata httpGetEnabled="true"/>
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
- <system.webServer>
+  <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
-  
 </configuration>
