--- a/MusicSolution/MusicLookupService/MusicLookupService.csproj
+++ b/MusicSolution/MusicLookupService/MusicLookupService.csproj
@@ -55,6 +55,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MusicService.svc" />
+    <None Include="Properties\DataSources\MusicInfo.SearchTypes.ArtistResult.datasource" />
+    <None Include="Properties\DataSources\MusicInfo.SearchTypes.LabelResult.datasource" />
+    <None Include="Properties\DataSources\MusicInfo.SearchTypes.RecordingResult.datasource" />
+    <None Include="Properties\DataSources\MusicInfo.SearchTypes.ReleaseGroupResult.datasource" />
+    <None Include="Properties\DataSources\MusicInfo.SearchTypes.ReleaseResult.datasource" />
+    <None Include="Properties\DataSources\MusicInfo.SearchTypes.WorkResult.datasource" />
+    <None Include="Service References\serviceProxy\configuration91.svcinfo" />
+    <None Include="Service References\serviceProxy\configuration.svcinfo" />
+    <None Include="Service References\serviceProxy\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <Content Include="tryIt.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -71,6 +84,18 @@
     </Compile>
     <Compile Include="IMusicService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\serviceProxy\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="tryIt.aspx.cs">
+      <DependentUpon>tryIt.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="tryIt.aspx.designer.cs">
+      <DependentUpon>tryIt.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -80,6 +105,24 @@
       <Project>{8E9CB5BB-626E-4A5D-925F-7E37E9096034}</Project>
       <Name>MusicInfo</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\serviceProxy\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\serviceProxy\MusicService.wsdl" />
+    <None Include="Service References\serviceProxy\MusicService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\serviceProxy\MusicService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\serviceProxy\MusicService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
