--- a/Project3WebHost/Web.config
+++ b/Project3WebHost/Web.config
@@ -23,9 +23,9 @@
     </behaviors>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true">
       <serviceActivations>
-        <add relativeAddress="StemmingService.svc" service="StemmingServiceLibrary.StemmingService" factory="System.ServiceModel.Activation.ServiceHostFactory" />
-        <add relativeAddress="Top10ContentWordsService.svc" service="Top10ContentWordsServiceLibrary.Top10ContentWordsService" factory="System.ServiceModel.Activation.ServiceHostFactory" />
-        <add relativeAddress="ShoppingCartService.svc" service="ShoppingCartServiceLibrary.ShoppingCartService" factory="System.ServiceModel.Activation.ServiceHostFactory" />
+        <add relativeAddress="~/StemmingService/Service.svc" service="StemmingServiceLibrary.StemmingService" factory="System.ServiceModel.Activation.ServiceHostFactory" />
+        <add relativeAddress="~/Top10ContentWordsService/Service.svc" service="Top10ContentWordsServiceLibrary.Top10ContentWordsService" factory="System.ServiceModel.Activation.ServiceHostFactory" />
+        <add relativeAddress="~/ShoppingCartService/Service.svc" service="ShoppingCartServiceLibrary.ShoppingCartService" factory="System.ServiceModel.Activation.ServiceHostFactory" />
       </serviceActivations>
     </serviceHostingEnvironment>
   </system.serviceModel>
