--- a/StemmingServiceWebApplication/Web.Debug.config
+++ b/StemmingServiceWebApplication/Web.Debug.config
@@ -27,4 +27,9 @@
       </customErrors>
     -->
   </system.web>
+  <system.serviceModel>
+    <client>
+      <endpoint address="http://webstrar6.fulton.asu.edu/page6/StemmingService/Service.svc" xdt:Transform="SetAttributes(address)" />
+    </client>
+  </system.serviceModel>
 </configuration>
