--- a/Top10ContentWordsWebApplication/Top10ContentWordsWebApplication.csproj
+++ b/Top10ContentWordsWebApplication/Top10ContentWordsWebApplication.csproj
@@ -58,12 +58,14 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\ASU Debug.pubxml" />
     <None Include="Service References\Top10ContentWordsServiceProxy\configuration91.svcinfo" />
     <None Include="Service References\Top10ContentWordsServiceProxy\configuration.svcinfo" />
     <None Include="Service References\Top10ContentWordsServiceProxy\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <Content Include="TryIt.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -72,6 +74,13 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="TryIt.aspx.cs">
+      <DependentUpon>TryIt.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TryIt.aspx.designer.cs">
+      <DependentUpon>TryIt.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
