--- a/Top10ContentWordsWebApplication/Web.config
+++ b/Top10ContentWordsWebApplication/Web.config
@@ -8,8 +8,8 @@
 <configuration>
     <system.web>
       <compilation debug="true" targetFramework="4.0" />
+      <pages enableViewStateMac="false" />
     </system.web>
-
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
