--- a/StemmingServiceWebApplication/Web.config
+++ b/StemmingServiceWebApplication/Web.config
@@ -9,6 +9,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <customErrors mode="Off"/>
+    <pages enableViewStateMac="false" />
   </system.web>
   <system.serviceModel>
     <bindings>
