fixed web config

--- a/WSDLDiscovery/WSDLDiscovery/Web.config
+++ b/WSDLDiscovery/WSDLDiscovery/Web.config
@@ -77,10 +77,10 @@
       <endpoint address="http://api.bing.net:80/soap.asmx" binding="basicHttpBinding"
         bindingConfiguration="BingPortBinding" contract="bingSearch.BingPortType"
         name="BingPort" />
-      <endpoint address="http://webstrar6.fulton.asu.edu/page2/Service1.svc"
+      <endpoint address="http://webstrar6.fulton.asu.edu/page2/address/Service1.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
         contract="WSDLAddress.IService" name="BasicHttpBinding_IService1" />
-      <endpoint address="http://webstrar6.fulton.asu.edu/page3/Service1.svc"
+      <endpoint address="http://webstrar6.fulton.asu.edu/page2/discovery/Service1.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService11"
         contract="DiscoveryService.IService1" name="BasicHttpBinding_IService11" />
     </client>
