--- a/Top10ContentWordsServiceLibrary/App.config
+++ b/Top10ContentWordsServiceLibrary/App.config
@@ -7,6 +7,16 @@
   <!-- When deploying the service library project, the content of the config file must be added to the host's 
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://venus.eas.asu.edu/WSRepository/Services/Web2StringSVC/Service.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService"
+        contract="Web2StringProxy.IService" name="BasicHttpBinding_IService" />
+    </client>
     <services>
       <service name="Top10ContentWordsServiceLibrary.Top10ContentWordsService">
         <endpoint address="" binding="basicHttpBinding" contract="Top10ContentWordsServiceLibrary.ITop10ContentWordsService">
