--- a/ShoppingCartServiceLibrary/ShoppingCartServiceLibrary.csproj
+++ b/ShoppingCartServiceLibrary/ShoppingCartServiceLibrary.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CartItem.cs" />
     <Compile Include="IShoppingCartService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\AWSECommerceServiceProxy\Reference.cs">
@@ -51,6 +52,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="ShoppingCart.cs" />
     <Compile Include="ShoppingCartService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -83,6 +85,7 @@
     <None Include="Service References\AWSECommerceServiceProxy\ShoppingCartServiceLibrary.AWSECommerceServiceProxy.SimilarityLookupResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="ShoppingCartServiceClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
