--- a/Top10ContentWordsServiceLibrary/App.config
+++ b/Top10ContentWordsServiceLibrary/App.config
@@ -9,7 +9,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IService" />
+        <binding name="BasicHttpBinding_IService" maxReceivedMessageSize="6553600" />
       </basicHttpBinding>
     </bindings>
     <client>
