--- a/Top10ContentWordsWebApplication/Web.config
+++ b/Top10ContentWordsWebApplication/Web.config
@@ -13,7 +13,9 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_ITop10ContentWordsService" />
+                <binding name="BasicHttpBinding_ITop10ContentWordsService" maxReceivedMessageSize="6553600">
+                  <readerQuotas maxStringContentLength="6553600" />
+                </binding>
             </basicHttpBinding>
         </bindings>
         <client>
