--- a/Project3WebHost/Web.config
+++ b/Project3WebHost/Web.config
@@ -4,9 +4,18 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  </configSections>
+  <connectionStrings>
+    <!--<add name="ShoppingCartContext" connectionString="Data Source=C:\\S\\Git\\Project3\\ShoppingCartServiceLibrary\\ShoppingCartDatabase.sdf" providerName="System.Data.SqlServerCe.4.0" />-->
+    <add name="ShoppingCartContext" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=WebSite6; Integrated Security=True; MultipleActiveResultSets=True" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <customErrors mode="Off" />
+    <pages enableViewStateMac="false" />
   </system.web>
   <system.serviceModel>
     <behaviors>
@@ -19,6 +28,18 @@
         </behavior>
       </serviceBehaviors>
     </behaviors>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IService" maxReceivedMessageSize="6553600">
+          <readerQuotas maxStringContentLength="6553600" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://venus.eas.asu.edu/WSRepository/Services/Web2StringSVC/Service.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService"
+        contract="Web2StringProxy.IService" name="BasicHttpBinding_IService" />
+    </client>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true">
       <serviceActivations>
         <add relativeAddress="~/StemmingService/Service.svc" service="StemmingServiceLibrary.StemmingService" factory="System.ServiceModel.Activation.ServiceHostFactory" />
@@ -35,12 +56,11 @@
       -->
     <directoryBrowse enabled="true" />
   </system.webServer>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Data.SqlServerCe" publicKeyToken="89845dcd8080cc91" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="Data Source=.\SQLEXPRESS; Integrated Security=True; MultipleActiveResultSets=True" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
 </configuration>
