--- a/ShoppingCartServiceWebApplication/Web.config
+++ b/ShoppingCartServiceWebApplication/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -8,12 +8,15 @@
 <configuration>
     <system.web>
       <compilation debug="true" targetFramework="4.0" />
+      <pages enableViewStateMac="false" />
     </system.web>
 
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IShoppingCartService" />
+                <binding name="BasicHttpBinding_IShoppingCartService" maxReceivedMessageSize="6553600">
+                    <readerQuotas maxStringContentLength="6553600" />
+                </binding>
             </basicHttpBinding>
         </bindings>
         <client>
