--- a/StemmingServiceWebApplication/Web.config
+++ b/StemmingServiceWebApplication/Web.config
@@ -14,7 +14,9 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IStemmingService" />
+        <binding name="BasicHttpBinding_IStemmingService" maxReceivedMessageSize="6553600">
+          <readerQuotas maxStringContentLength="6553600" />
+        </binding>
       </basicHttpBinding>
     </bindings>
     <client>
