--- a/Top10ContentWordsServiceLibrary/Top10ContentWordsServiceLibrary.csproj
+++ b/Top10ContentWordsServiceLibrary/Top10ContentWordsServiceLibrary.csproj
@@ -34,8 +34,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HtmlAgilityPack">
-      <HintPath>..\libs\HtmlAgilityPack.dll</HintPath>
+    <Reference Include="Html2Txt">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.3\lib\Html2Txt.dll</HintPath>
+    </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.4.0.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\HtmlAgilityPack.1.4.3\lib\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
@@ -59,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="Service References\Web2StringProxy\Service.wsdl" />
     <None Include="Service References\Web2StringProxy\Service.xsd">
       <SubType>Designer</SubType>
