--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Project3WebHost\packages.config" />
   <repository path="..\ShoppingCartServiceLibrary\packages.config" />
+  <repository path="..\Top10ContentWordsServiceLibrary\packages.config" />
 </repositories>
